--- a/main_branch/src/css/Index.css
+++ b/main_branch/src/css/Index.css
@@ -42,3 +42,11 @@ textarea
 {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.0);
 }
+
+@media (max-width: 600px)
+{
+    #submit_note
+    {
+        left: 58%;
+    }
+}
