--- a/main_branch/src/css/Notes.css
+++ b/main_branch/src/css/Notes.css
@@ -2,7 +2,7 @@
 
 section
 {
-    width: 70%;
+    width: 80%;
     padding: 10px;
     background-color: white;
     border-radius: 15px;
@@ -114,6 +114,17 @@ nav .opt:hover
     #note_modal div
     {
         width: 95%;
+    }
+}
+@media (min-width: 1000px)
+{
+    section
+    {
+        width: 60%;
+    }
+    .note
+    {
+        padding: 15px 10px 15px 10px;
     }
 }
 
